[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fast-snmp"
version = "1.0.0"
description = "Un microservicio especializado en la consuta de MIB bajo SNMPv2."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Angyee Marin", email = "angyeemarin.dev@gmail.com" },
]
keywords = ["network", "snmp"]
dependencies = [
    "click>=8.3.0",
    "fastapi[standard]",
    "pandas>=2.3.2",
    "paramiko>=4.0.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.1.1",
    "rich>=14.2.0",
    "uvicorn>=0.38.0"
]

[tool.setuptools]
packages = ["fast_snmp"]
